--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,18 @@
 version: '2'
 services:
-   web:
-      image: nginx:latest
+   tomcat:
+      image: tomcat:8
       links: 
-         - php
+         - build
       ports:
-         - "8080:80"
+         - "8080:8080"
       volumes:
          - ./nginx.conf:/etc/nginx/conf.d/default.conf
       volumes_from:
-         - php
-   php:
-      build: php-7.0.fpm.custom
+         - build
+   build:
+      build: boxfuse-sample-java-war-hello-custom
       envirenment:
         - TYPO3_CONTEXT=Development/Docker
-      links:
-         - db
-         - redis
       volumes:
          - ./htdocs:/var/www/html
-   db:
-      images: mariadb:10.1
-      envirenment:
-         - MYSQL_ROOT_PASSWORD=secret
-      volumes
-         - ./mysql:/var/lib/mysql
-   redis:
-     image: redis: latest
