--- a/boxfuse-sample-java-war-hello-custom/Dockerfile
+++ b/boxfuse-sample-java-war-hello-custom/Dockerfile
@@ -3,6 +3,8 @@ FROM maven:latest
 RUN apt-get update
 #RUN apt-get install -y openjdk-8-jdk
 
+RUN pwd
+
 #RUN apt-get install -y maven
 RUN apt-get install -y git
 
