--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,5 +1,5 @@
 FROM maven:latest AS maven
-RUN apt-get update
+#RUN apt-get update
 #RUN apt-get install -y git
 RUN git clone ${PROJECT_PATH}
 WORKDIR boxfuse-sample-java-war-hello
