--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:latest AS maven
-#RUN apt-get update
-#RUN apt-get install -y git
-RUN git clone $PROJECT_PATH
+
+ARG project_path
+RUN git clone $project_path
 WORKDIR boxfuse-sample-java-war-hello
 RUN mvn package
 
