--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
       build: tomcat
       ports:
          - "8080:8080"
-      environment:
-         - PROJECT_PATH=https://github.com/boxfuse/boxfuse-sample-java-war-hello
+      args:
+         - project_path=https://github.com/boxfuse/boxfuse-sample-java-war-hello
