--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,9 +1,12 @@
 FROM maven:latest AS maven
 
 ARG project_path
+ARG project_workdir
+ARG source_copy
+ARG target_dir
 RUN git clone $project_path
-WORKDIR boxfuse-sample-java-war-hello
+WORKDIR $project_workdir
 RUN mvn package
 
 FROM tomcat:8
-COPY --from=maven /boxfuse-sample-java-war-hello/target/hello-1.0.war /usr/local/tomcat/webapps/
+COPY --from=maven $source_copy $target_dir
