--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:latest AS maven
+FROM maven:latest AS Mymaven
 
 ARG project_path
 ARG project_workdir
@@ -9,5 +9,5 @@ RUN mvn package
 FROM tomcat:8
 ARG source_copy
 ARG target_dir
-COPY --from=maven $source_copy $target_dir
+COPY --from=Mymaven $source_copy $target_dir
 RUN ls $target_dir
